[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/GUI/minimap_indicator.svg" type="Texture" id=2]
[ext_resource path="res://assets/GUI/label_resources_bg.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/Titillium-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/GUI/mushroom_red.png" type="Texture" id=5]
[ext_resource path="res://assets/GUI/mushroom_blue.png" type="Texture" id=6]
[ext_resource path="res://assets/GUI/mushroom_yellow.png" type="Texture" id=7]
[ext_resource path="res://assets/GUI/lifebar_bg.png" type="Texture" id=8]
[ext_resource path="res://assets/GUI/lifebar_fill.png" type="Texture" id=9]
[ext_resource path="res://assets/GUI/energy_bar_bg.png" type="Texture" id=10]
[ext_resource path="res://assets/GUI/energy_bar_fill.png" type="Texture" id=11]

[sub_resource type="ViewportTexture" id=1]

[sub_resource type="DynamicFont" id=5]
size = 45
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 38
font_data = ExtResource( 4 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Minimap" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -185.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 185.0

[node name="Panel_Minimap" type="PanelContainer" parent="Minimap"]
margin_right = 165.0
margin_bottom = 165.0

[node name="TextureRect_Minimap" type="TextureRect" parent="Minimap/Panel_Minimap"]
margin_left = 7.0
margin_top = 7.0
margin_right = 158.0
margin_bottom = 158.0
texture = SubResource( 1 )
expand = true

[node name="TextureRect_Triangle" type="TextureRect" parent="Minimap/Panel_Minimap/TextureRect_Minimap"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.5
margin_top = -12.5
margin_right = 12.5
margin_bottom = 12.5
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Mushrooms_Red" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -140.0
margin_right = -20.0
margin_bottom = -20.0

[node name="NinePatchRect" type="NinePatchRect" parent="Mushrooms_Red"]
margin_right = 180.0
margin_bottom = 120.0
size_flags_horizontal = 3
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Mushrooms_Red/NinePatchRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -23.0
margin_right = 48.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Mushrooms_Red/NinePatchRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -54.0
margin_right = 260.0
margin_bottom = 291.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )
stretch_mode = 4

[node name="Mushrooms_Blue" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -140.0
margin_right = -220.0
margin_bottom = -20.0

[node name="HBoxContainer" type="HBoxContainer" parent="Mushrooms_Blue"]
margin_right = 180.0
margin_bottom = 120.0

[node name="NinePatchRect" type="NinePatchRect" parent="Mushrooms_Blue/HBoxContainer"]
margin_right = 180.0
margin_bottom = 120.0
size_flags_horizontal = 3
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Mushrooms_Blue/HBoxContainer/NinePatchRect"]
anchor_bottom = 1.0
margin_top = 37.0
margin_right = 48.0
margin_bottom = -37.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Mushrooms_Blue/HBoxContainer/NinePatchRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -54.0
margin_right = 260.0
margin_bottom = 291.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )
stretch_mode = 4

[node name="Mushrooms_Yellow" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -600.0
margin_top = -140.0
margin_right = -420.0
margin_bottom = -20.0

[node name="HBoxContainer" type="HBoxContainer" parent="Mushrooms_Yellow"]
editor/display_folded = true
margin_right = 180.0
margin_bottom = 120.0

[node name="NinePatchRect" type="NinePatchRect" parent="Mushrooms_Yellow/HBoxContainer"]
margin_right = 180.0
margin_bottom = 120.0
size_flags_horizontal = 3
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Mushrooms_Yellow/HBoxContainer/NinePatchRect"]
anchor_bottom = 1.0
margin_top = 37.0
margin_right = 48.0
margin_bottom = -37.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Mushrooms_Yellow/HBoxContainer/NinePatchRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -54.0
margin_right = 260.0
margin_bottom = 291.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )
stretch_mode = 4

[node name="Health_Stats" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 449.0
margin_bottom = 110.0

[node name="Life_Bar" type="HBoxContainer" parent="Health_Stats"]
editor/display_folded = true
margin_right = 455.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Health_Stats/Life_Bar"]
margin_top = 7.0
margin_right = 55.0
margin_bottom = 46.0
rect_min_size = Vector2( 55, 0 )
custom_fonts/font = SubResource( 6 )
text = "HP"
align = 1
valign = 1

[node name="TextureProgress" type="TextureProgress" parent="Health_Stats/Life_Bar"]
margin_left = 59.0
margin_right = 455.0
margin_bottom = 53.0
value = 100.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )

[node name="Energy_Bar" type="HBoxContainer" parent="Health_Stats"]
margin_top = 57.0
margin_right = 455.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Health_Stats/Energy_Bar"]
margin_top = 7.0
margin_right = 55.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 6 )
text = "MP"
align = 1
valign = 1

[node name="TextureProgress" type="TextureProgress" parent="Health_Stats/Energy_Bar"]
margin_left = 59.0
margin_right = 455.0
margin_bottom = 53.0
value = 100.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 11 )

[node name="Timer_Energy" type="Timer" parent="Health_Stats/Energy_Bar"]
wait_time = 0.1
autostart = true

